--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'org.slf4j:slf4j-simple:1.7.12'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
 
 }
