--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.12'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.android.support:design:+'
 
 }
