--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/NoActionBar"></activity>
         <activity android:name=".LogoutActivity"></activity>
         <activity android:name=".RegistrationActivity"></activity>
         <activity android:name=".MenuActivity"></activity>
