--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.android.support:design:+'
+    compile 'com.android.support:cardview-v7:+'
 
 }
