--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,28 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/NoActionBar" />
+        <activity android:name=".LogoutActivity" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:theme="@style/NoActionBar" />
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".GadgetActivity" />
+        <activity android:name=".LoanActivity" />
+        <activity android:name=".ReservationActivity" />
+        <activity android:name=".LibrarySwitchActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:theme="@style/NoActionBar"></activity>
-        <activity android:name=".LogoutActivity"></activity>
-        <activity
-            android:name=".RegistrationActivity"
-            android:theme="@style/NoActionBar"></activity>
-        <activity android:name=".MenuActivity"></activity>
-        <activity android:name=".GadgetActivity"></activity>
-        <activity android:name=".LoanActivity"></activity>
-        <activity android:name=".ReservationActivity"></activity>
-        <activity android:name=".LibrarySwitchActivity"></activity>
     </application>
 
 </manifest>
