--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
-            android:theme="@style/NoActionBar" />
+            android:name=".LoginActivity">
+            <!--android:theme="@style/NoActionBar" -->
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
         <activity android:name=".LogoutActivity" />
         <activity
             android:name=".RegistrationActivity"
             android:theme="@style/NoActionBar" />
-        <activity android:name=".MenuActivity" />
-        <activity android:name=".GadgetActivity" />
         <activity android:name=".LoanActivity" />
         <activity android:name=".ReservationActivity" />
         <activity android:name=".LibrarySwitchActivity" />
