--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:theme="@style/NoActionBar"
             android:name=".LoginActivity">
             <!--android:theme="@style/NoActionBar" -->
         <intent-filter>
